karnc/tests/fixtures/negative/113_cron_duplicate_schedule/src/svc.karn
context svc

service sweeper {
  on cron("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }

  on cron("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
